# model-oneshot-benchmark

./: PROMPT.txt  README.md
tt-glm/: Cargo.toml  PLAN.md
tt-glm-dual/: .gitignore  Cargo.toml  PLAN.md  SPEC.md
tt-glm-dual/src/: lib.rs  main.rs  mcp_impl.rs
tt-glm-dual/src/cli/: mod.rs  output.rs
tt-glm-dual/src/core/: db.rs  error.rs  graph.rs  mod.rs  task.rs
tt-glm-dual/tests/: integration.rs
tt-glm/src/: error.rs  lib.rs  main.rs
tt-glm/src/cli/: mod.rs
tt-glm/src/core/: artifact.rs  config.rs  dependency.rs  mod.rs  repository.rs  task.rs
tt-glm/src/db/: connection.rs  mod.rs  schema.rs
tt-glm/src/graph/: cycle.rs  mod.rs  order.rs  topology.rs
tt-kimi/: Cargo.toml  PLAN.md
tt-kimi-dual/: .gitignore  Cargo.toml  PLAN.md
tt-kimi-dual/src/: cli.rs  lib.rs  main.rs  mcp.rs
tt-kimi-dual/src/core/: db.rs  error.rs  graph.rs  mod.rs  models.rs
tt-kimi-dual/tests/: integration_test.rs
tt-kimi/src/: cli.rs  cli_handlers.rs  core.rs  db.rs  error.rs  graph.rs  lib.rs  main.rs  mcp.rs  models.rs
tt-minimax/: Cargo.toml  PLAN.md
tt-minimax-dual/: PLAN.md
tt-minimax-dual/tt/: .gitignore  Cargo.toml
tt-minimax-dual/tt/src/: cli.rs  core.rs  db.rs  error.rs  lib.rs  main.rs  mcp.rs  models.rs  tests.rs
tt-minimax/src/: cli.rs  error.rs  lib.rs  main.rs  mcp.rs
tt-minimax/src/core/: mod.rs  target.rs  task.rs  workflow.rs
tt-minimax/src/db/: mod.rs  models.rs  schema.rs
tt-minimax/src/graph/: cycle.rs  mod.rs  sort.rs
