[package]
name = "tt"
version = "1.0.0"
edition = "2021"
description = "DAG-based task tracker with MCP server"
license = "MIT"
repository = "https://github.com/hivemind-ai/tt"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Error handling
thiserror = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MCP server
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.16"

[[bin]]
name = "tt"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
