[package]
name = "tt"
version = "0.1.0"
edition = "2021"
description = "DAG-based task tracker CLI tool and MCP server"
license = "MIT"

[dependencies]
# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# MCP Server
rmcp = { version = "0.15", features = ["server", "transport-async-rw", "macros"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "io-std", "macros"] }
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.16"

[[bin]]
name = "tt"
path = "src/main.rs"
