[package]
name = "tt"
version = "0.1.0"
edition = "2021"
authors = ["tt-developer"]
description = "DAG-Based Task Tracker CLI and MCP Server"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled", "chrono", "serde_json"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.16"
assert_cmd = "2.0"
predicates = "3.1"
