[package]
name = "tt"
version = "0.1.0"
edition = "2024"
authors = ["Task Tracker Team"]
description = "DAG-based Task Tracker CLI and MCP server"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
rmcp = { version = "0.15.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "io-std"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.16.0"
assert_cmd = "2.0.16"
predicates = "3.1.3"
