[package]
name = "tt"
version = "0.1.0"
edition = "2021"
description = "DAG-based task tracker with MCP server"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "0.15", features = ["server"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.19"
