[package]
name = "tt"
version = "0.1.0"
edition = "2024"

[lib]
name = "tt"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "tt"
path = "src/main.rs"
